--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="../assets/images/about/1.jpg">
+                            <img src="assets/images/about/1.jpg">
                         </div>
                         <div class="card_text">Super team</div>
                     </div>
@@ -114,7 +114,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="../assets/images/about/2.jpg">
+                            <img src="assets/images/about/2.jpg">
                         </div>
                         <div class="card_text">Amazing progects</div>
                     </div>
@@ -122,7 +122,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="../assets/images/about/3.jpg">
+                            <img src="assets/images/about/3.jpg">
                         </div>
                         <div class="card_text">Happy clients</div>
                     </div>
@@ -356,7 +356,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="../assets/images/team/1.jpg">
+                            <img src="assets/images/team/1.jpg">
                         </div>
                         <div class="card_text">
                             <div class="social">
@@ -384,7 +384,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="../assets/images/team/2.jpg">
+                            <img src="assets/images/team/2.jpg">
                         </div>
                         <div class="card_text">
                             <div class="social">
@@ -412,7 +412,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="../assets/images/team/3.jpg">
+                            <img src="assets/images/team/3.jpg">
                         </div>
                         <div class="card_text">
                             <div class="social">
